--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -1,5 +1,5 @@
-appId: com.electron.app
-productName: test
+appId: com.electron.fileorganizer
+productName: FileOrganizer
 directories:
   buildResources: build
 files:
