--- a/package.json
+++ b/package.json
@@ -25,11 +25,14 @@
   "dependencies": {
     "@electron-toolkit/preload": "^3.0.2",
     "@electron-toolkit/utils": "^4.0.0",
+    "@xenova/transformers": "^2.17.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "electron-store": "^8.2.0",
     "electron-updater": "^6.3.9",
     "lucide-react": "^0.556.0",
+    "mammoth": "^1.11.0",
+    "pdf-parse": "^2.4.5",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
@@ -38,6 +41,7 @@
     "@electron-toolkit/tsconfig": "^2.0.0",
     "@playwright/test": "^1.57.0",
     "@types/node": "^22.19.1",
+    "@types/pdf-parse": "^1.1.5",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.1",
