--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "lucide-react": "^0.556.0",
     "mammoth": "^1.11.0",
     "pdf-parse": "^2.4.5",
-    "tailwind-merge": "^3.4.0"
+    "tailwind-merge": "^3.4.0",
+    "tesseract.js": "^6.0.1"
   },
   "devDependencies": {
     "@electron-toolkit/eslint-config-prettier": "^3.0.0",
