--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dev": "electron-vite dev",
     "test": "vitest",
     "test:e2e": "playwright test",
+    "test:all": "vitest && playwright test",
     "build": "npm run typecheck && electron-vite build",
     "postinstall": "electron-builder install-app-deps",
     "build:unpack": "npm run build && electron-builder --dir",
