--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@xenova/transformers": "^2.17.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "electron-log": "^5.4.3",
     "electron-store": "^8.2.0",
     "electron-updater": "^6.3.9",
     "lucide-react": "^0.556.0",
