feat: implement auto-updater logic

--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -39,7 +39,8 @@ appImage:
   artifactName: ${name}-${version}.${ext}
 npmRebuild: false
 publish:
-  provider: generic
-  url: https://example.com/auto-updates
+  provider: github
+  owner: electron-user
+  repo: electron-file-organizer
 electronDownload:
   mirror: https://npmmirror.com/mirrors/electron/
