--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "@electron-toolkit/preload": "^3.0.2",
     "@electron-toolkit/utils": "^4.0.0",
     "@xenova/transformers": "^2.17.2",
-    "chokidar": "^5.0.0",
+    "chokidar": "3.6.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "electron-log": "^5.4.3",
