--- a/package.json
+++ b/package.json
@@ -51,9 +51,12 @@
     "electron-log": "^5.4.3",
     "electron-store": "^8.2.0",
     "electron-updater": "^6.3.9",
+    "i18next": "^25.7.2",
+    "i18next-browser-languagedetector": "^8.2.0",
     "lucide-react": "^0.556.0",
     "mammoth": "^1.11.0",
     "pdf-parse": "^2.4.5",
+    "react-i18next": "^16.4.1",
     "react-virtualized-auto-sizer": "^1.0.26",
     "react-window": "^2.2.3",
     "tailwind-merge": "^3.4.0",
