refactor: modernize UI architecture and add CI/CD pipeline

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,18 +7,20 @@ on:
     branches: [main]
 
 jobs:
-  check:
+  validate:
+    name: Validate
     runs-on: ubuntu-latest
-
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout Repo
+        uses: actions/checkout@v4
 
-      - name: Setup Node.js
+      - name: Setup Node
         uses: actions/setup-node@v4
         with:
           node-version: 20
           cache: 'yarn'
-      - name: Install dependencies
+
+      - name: Install Dependencies
         run: yarn install --frozen-lockfile
 
       - name: Lint
@@ -26,9 +28,6 @@ jobs:
 
       - name: Typecheck
         run: yarn typecheck
-
-      - name: Build
-        run: yarn build
 
       - name: Test
         run: yarn test
