--- a/package.json
+++ b/package.json
@@ -55,10 +55,13 @@
     "i18next-browser-languagedetector": "^8.2.0",
     "lucide-react": "^0.556.0",
     "mammoth": "^1.11.0",
+    "next-themes": "^0.4.6",
     "pdf-parse": "^2.4.5",
     "react-i18next": "^16.4.1",
+    "react-router-dom": "^7.10.1",
     "react-virtualized-auto-sizer": "^1.0.26",
     "react-window": "^2.2.3",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "tesseract.js": "^6.0.1"
   },
