--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -26,12 +26,13 @@ mac:
     - NSDocumentsFolderUsageDescription: Application requests access to the user's Documents folder.
     - NSDownloadsFolderUsageDescription: Application requests access to the user's Downloads folder.
   notarize: false
+  target:
+    - dmg
 dmg:
   artifactName: ${name}-${version}.${ext}
 linux:
   target:
     - AppImage
-    - deb
   maintainer: electronjs.org
   category: Utility
 appImage:
