--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
   "dependencies": {
     "@electron-toolkit/preload": "^3.0.2",
     "@electron-toolkit/utils": "^4.0.0",
+    "@prisma/client": "^7.1.0",
     "@xenova/transformers": "^2.17.2",
     "chokidar": "3.6.0",
     "class-variance-authority": "^0.7.1",
@@ -99,6 +100,7 @@
     "playwright": "^1.57.0",
     "postcss": "^8.5.6",
     "prettier": "^3.7.4",
+    "prisma": "^7.1.0",
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
     "tailwindcss": "^3.4.17",
