--- a/package.json
+++ b/package.json
@@ -43,13 +43,13 @@
   },
   "dependencies": {
     "@electron-toolkit/preload": "^3.0.2",
-    "@electron-toolkit/utils": "^4.0.0",
     "@xenova/transformers": "^2.17.2",
+    "better-sqlite3": "^12.5.0",
     "chokidar": "3.6.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "drizzle-orm": "^0.45.1",
     "electron-log": "^5.4.3",
-    "electron-store": "^8.2.0",
     "electron-updater": "^6.3.9",
     "i18next": "^25.7.2",
     "i18next-browser-languagedetector": "^8.2.0",
@@ -78,7 +78,9 @@
     "@electron-toolkit/eslint-config-prettier": "^3.0.0",
     "@electron-toolkit/eslint-config-ts": "^3.1.0",
     "@electron-toolkit/tsconfig": "^2.0.0",
+    "@electron-toolkit/utils": "1.0.1",
     "@playwright/test": "^1.57.0",
+    "@types/better-sqlite3": "^7.6.13",
     "@types/chokidar": "^1.7.5",
     "@types/node": "^22.19.1",
     "@types/pdf-parse": "^1.1.5",
@@ -87,9 +89,10 @@
     "@types/react-window": "^1.8.8",
     "@vitejs/plugin-react": "^5.1.1",
     "autoprefixer": "^10.4.22",
+    "drizzle-kit": "^0.31.8",
     "electron": "^30.0.0",
     "electron-builder": "^26.0.12",
-    "electron-vite": "^5.0.0",
+    "electron-vite": "2.3.0",
     "eslint": "^9.39.1",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^7.0.1",
@@ -103,7 +106,7 @@
     "react-dom": "^19.2.1",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.9.3",
-    "vite": "^7.2.6",
+    "vite": "5.4.8",
     "vitest": "^4.0.15"
   }
 }
