--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   },
   "dependencies": {
     "@electron-toolkit/preload": "^3.0.2",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@xenova/transformers": "^2.17.2",
     "better-sqlite3": "^12.5.0",
     "chokidar": "3.6.0",
@@ -51,6 +52,7 @@
     "drizzle-orm": "^0.45.1",
     "electron-log": "^5.4.3",
     "electron-updater": "^6.3.9",
+    "framer-motion": "^12.23.26",
     "i18next": "^25.7.2",
     "i18next-browser-languagedetector": "^8.2.0",
     "lucide-react": "^0.556.0",
