--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "react-router-dom": "^7.10.1",
     "react-virtualized-auto-sizer": "^1.0.26",
     "react-window": "^2.2.3",
+    "recharts": "^3.6.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "tesseract.js": "^6.0.1"
