--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@electron-toolkit/preload": "^3.0.2",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@xenova/transformers": "^2.17.2",
+    "@xyflow/react": "^12.10.0",
     "better-sqlite3": "^12.5.0",
     "chokidar": "3.6.0",
     "class-variance-authority": "^0.7.1",
