--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   },
   "dependencies": {
     "@electron-toolkit/preload": "^3.0.2",
+    "@mlc-ai/web-llm": "^0.2.80",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@xenova/transformers": "^2.17.2",
     "@xyflow/react": "^12.10.0",
