--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
   "dependencies": {
     "@electron-toolkit/preload": "^3.0.2",
     "@mlc-ai/web-llm": "^0.2.80",
+    "@parcel/watcher": "^2.5.4",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@xenova/transformers": "^2.17.2",
     "@xyflow/react": "^12.10.0",
@@ -68,7 +69,8 @@
     "recharts": "^3.6.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
-    "tesseract.js": "^6.0.1"
+    "tesseract.js": "^6.0.1",
+    "uuid": "9.0.1"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
@@ -96,6 +98,7 @@
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
     "@types/react-window": "^1.8.8",
+    "@types/uuid": "9.0.8",
     "@vitejs/plugin-react": "^5.1.1",
     "autoprefixer": "^10.4.22",
     "drizzle-kit": "^0.31.8",
